implemented post detail page, added post media display
